hero overflow fixed

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -67,5 +67,4 @@ body {
     display: flex;
     flex-direction: column;
     background: #fff;
-    min-height: 100%;
 }
